# misel

./: README.md  init_db.py  main.py  pyproject.toml  requirements.txt
templates/: base.html  dashboard.html  index.html  login.html  schedule.html
