[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.3",
    "flask-socketio>=5.4.1",
    "flask-sqlalchemy>=3.1.1",
    "werkzeug>=3.1.1",
    "unidecode>=1.3.8",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
]
